omod/src/main/compass/sass/mirebalais.scss
@import "base";

header {
  position: relative;
  background-color: $highlight;
  color: #CCC;
  @include border-radius(5px);
  a, a:visited, a:hover, a:link {
    color: white;
  }
  h1 {
    color: #FFF;
    margin: 0;
    padding: 10px
  }
  .logo {
    float: left;
    margin: 10px;
  }
  .user-options {
    text-align: right;
    li {
      display: inline-block;
      margin: 20px;
      &.change-location, &.logout {
        color: white;
      }
      &.change-location {
        border: 1px solid lighten($highlight, 5%);
        @include border-radius(3px);
        a {
          display: block;
        }
        &:hover, .focus {
          background: lighten($highlight, 5%);
          a:hover {
            text-decoration: none;
          }
        }
      }
    }
  }

  #session-location {
    position: absolute;
    display: none;
    top: 60px;
    left: 70px;
    background: white;
    border: 2px solid lighten($highlight, 5%);
    @include border-radius(3px);
    width: 853px;
    font-size: 0.8em;

    li {
      width: 239px;
    }
  }

}

.hidden {
  display: none;
}

//archives-room
.box-align {
  display: inline-block;
  vertical-align: top;

  &.btn{
    margin: 85px 10px 0 10px;

    i{
      line-height: 1.1em;
    }

    span{
      display: block;
      font-size: 0.9em;
    }
  }
}

